fixing spacing, checking for errors

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ Section backgrounds (light orange) #FFF4EA
 Section backgrounds + Menu items + Contact button + h5 (dark green/blue) #359BB3
 Dark typography #4D4D4D
 Light typography #FFFFFF
-Orange typography + Prototype buttons #EC8462
+Orange typography + Prototype buttons #EC8462 new: E9724B
 
 */
 
@@ -77,6 +77,7 @@ img {
 a {
   color: #359bb3;
   text-decoration: none;
+  font-size: 0.8em;
 }
 
 a:hover {
@@ -119,7 +120,7 @@ a:focus {
 
 .button.contact {
   display: inline-block;
-  background-color: #ec8462;
+  background-color: #e9724b;
   color: #ffffff;
   font-weight: 600;
   padding: 10px 50px;
@@ -142,7 +143,7 @@ a:focus {
 
 .button.prototype {
   display: inline-block;
-  background-color: #ec8462;
+  background-color: #e9724b;
   color: #ffffff;
   font-weight: 600;
   padding: 10px;
@@ -342,6 +343,10 @@ nav > ul > li > a {
   padding: 0 0 10px;
 }
 
+#conclusion {
+  padding-bottom: 0px;
+}
+
 /* ==============================
 Medium devices (640px and larger)
 ================================= */
@@ -350,7 +355,11 @@ Medium devices (640px and larger)
     padding: 0 70px;
   }
   body {
-    font-size: 16px;
+    font-size: 15px;
+  }
+
+  li a {
+    font-size: 15px;
   }
   .hero {
     padding: 90px 0px;
@@ -387,7 +396,7 @@ Medium devices (640px and larger)
     font-size: 1em;
   }
   .logo {
-    max-width: 200px;
+    max-width: 150px;
     text-align: center;
     padding-right: 0px;
   }
@@ -412,12 +421,23 @@ Medium devices (640px and larger)
     list-style-type: none;
     padding: 0;
   }
+  div.dark-background div.row {
+    padding-bottom: 0px;
+  }
 }
 
 /* ==============================
 Large devices (1024px or larger)
 ================================= */
 @media only screen and (min-width: 1024px) {
+  p {
+    font-size: 15px;
+  }
+
+  li {
+    font-size: 15px;
+  }
+
   .col-lg-6 {
     width: 50%;
   }
@@ -448,7 +468,7 @@ Large devices (1024px or larger)
     padding: 0 130px;
   }
   body {
-    font-size: 18px;
+    font-size: 16px;
   }
   .hero {
     padding: 140px 0px;
@@ -467,10 +487,6 @@ Large devices (1024px or larger)
     border-radius: 15px;
     font-size: 1em;
   }
-
-  a {
-    font-size: 1.2em;
-  }
   h3 {
     font-size: 1.6em;
   }
@@ -486,42 +502,42 @@ X-large devices (1440px or larger)
   .container {
     padding: 0 300px;
   }
-}
 
-@keyframes color-change {
-  0% {
-    fill: #edc655;
+  @keyframes color-change {
+    0% {
+      fill: #edc655;
+    }
+    50% {
+      fill: #fcffad;
+    }
+    100% {
+      fill: #f76414;
+    }
   }
-  50% {
-    fill: #fcffad;
+  .sun {
+    animation: 4s color-change infinite alternate linear;
   }
-  100% {
-    fill: #f76414;
+  @keyframes cloud-move {
+    from {
+      transform: translate(0, 50px);
+    }
+    to {
+      transform: translate(200px, 50px);
+    }
   }
-}
-.sun {
-  animation: 4s color-change infinite alternate linear;
-}
-@keyframes cloud-move {
-  from {
-    transform: translate(0, 50px);
+  .cloud-front {
+    animation: 30s cloud-move infinite alternate linear;
   }
-  to {
-    transform: translate(200px, 50px);
-  }
-}
-.cloud-front {
-  animation: 30s cloud-move infinite alternate linear;
-}
 
-@keyframes cloud-move-reverse {
-  from {
-    transform: translate(446px, 48px);
+  @keyframes cloud-move-reverse {
+    from {
+      transform: translate(446px, 48px);
+    }
+    to {
+      transform: translate(100px, 48px);
+    }
   }
-  to {
-    transform: translate(100px, 48px);
+  .cloud-back {
+    animation: 34s cloud-move-reverse infinite alternate linear;
   }
-}
-.cloud-back {
-  animation: 34s cloud-move-reverse infinite alternate linear;
 }
